fixed profile spacing and added user logo

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10742,9 +10742,8 @@ a:hover {
 }
 
 #avatar {
-  width: 10%;
-  height: 19%;
-  border: 2px solid #00b386;
+  width: 5%;
+  height: 5%;
   margin-left: 45%;
 }
 
@@ -10753,13 +10752,18 @@ a:hover {
   margin-top: 35%;
 }
 
-#profile-name,
+#profile-name {
+  text-align: center;
+  margin-top: 2%;
+}
+
 #profile-button {
-  margin-top: 50%;
+  text-align: center;
+  margin-top: 2%;
 }
 
 #profile-email {
-  margin-top: 30%;
+  text-align: center;
 }
 
 .dongle {
