--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -84,9 +84,8 @@ a:hover {
 }
 
 #avatar {
-	width: 10%;
-	height: 19%;
-	border: 2px solid #00b386;
+	width: 5%;
+	height: 5%;
 	margin-left: 45%;
 }
 
@@ -95,13 +94,18 @@ a:hover {
 	margin-top: 35%;
 }
 
-#profile-name,
+#profile-name {
+	text-align: center;
+	margin-top: 2%;
+}
+
 #profile-button {
-	margin-top: 50%;
+	text-align: center;
+	margin-top: 2%;
 }
 
 #profile-email {
-	margin-top: 30%;
+	text-align: center;
 }
 
 .dongle {
